--- a/src/views/User/home.pug
+++ b/src/views/User/home.pug
@@ -1,5 +1,8 @@
 extends ../layout/index
+
 block  content
-    div
-        h1 Welcome to Real Satate 
-            span= user.name
+    div(class="py-10")
+        h1(class="text-4xl my-10 font-extrabold text-center text-teal ") Real
+            span(class="font-medium text-rosa") Estate
+        h2(class="text-center text-2xl font-extrabold mb-10")=page 
+        a(href="property/create" class="rounder-lg py-2 px-10 bg-indigo-400 text-white text-center uppercase my-5 hover:bg-red-700 hover:scale-105 text-sm font-bold inline-block  md:w-auto") Publish Property
