--- a/src/views/layout/index.pug
+++ b/src/views/layout/index.pug
@@ -15,7 +15,9 @@ html(lang="en")
 
     // Inicio del cuerpo del documento con clases CSS
     body.min-h-screen.bg-white
-
+        if showHeader
+            include nav-bar
         // Contenido principal
-        main(class="mx-auto container px-2 ")
+        main(class="mx-auto container mt-5 px-2 ")
             block content
+        block scripts
